# chcp-sharepoint-python-connector-package

./: LICENCE  README.md  pyproject.toml
spconnect/: __init__.py  sharepoint_connection.py
